--- a/EI391_ML.ipynb
+++ b/EI391_ML.ipynb
@@ -1654,4 +1654,245 @@
      "text": [
       "MSE for each output: [1664.64 1730.56 1354.24 1747.24]\n",
       "Average MSE: 1624.1699999999996\n",
-      "MAE for each output: [40.
+      "MAE for each output: [40.8 41.6 36.8 41.8]\n",
+      "Average MAE: 40.25\n",
+      "Explained Variance for each output: [1. 1. 1. 1.]\n",
+      "Average Explained Variance: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean Squared Error\n",
+    "mse = mean_squared_error(y_test, y_pred, multioutput='raw_values')\n",
+    "print(\"MSE for each output:\", mse)\n",
+    "print(\"Average MSE:\", mse.mean())\n",
+    "\n",
+    "# Mean Absolute Error\n",
+    "mae = mean_absolute_error(y_test, y_pred, multioutput='raw_values')\n",
+    "print(\"MAE for each output:\", mae)\n",
+    "print(\"Average MAE:\", mae.mean())\n",
+    "\n",
+    "# # R-squared\n",
+    "# r2 = r2_score(y_test, y_pred, multioutput='raw_values')\n",
+    "# print(\"R-squared for each output:\", r2)\n",
+    "# print(\"Average R-squared:\", r2) # .mean()\n",
+    "\n",
+    "# Explained Variance\n",
+    "explained_variance = explained_variance_score(y_test, y_pred, multioutput='raw_values')\n",
+    "print(\"Explained Variance for each output:\", explained_variance)\n",
+    "print(\"Average Explained Variance:\", explained_variance.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wastewater Treatment</td>\n",
+       "      <td>Global Warming</td>\n",
+       "      <td>CML</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>per cubic meter of wastewater</td>\n",
+       "      <td>cradle-to-gate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wastewater Treatment</td>\n",
+       "      <td>Eutrophication</td>\n",
+       "      <td>CML</td>\n",
+       "      <td>50</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>per cubic meter of wastewater</td>\n",
+       "      <td>cradle-to-grave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Energy Production</td>\n",
+       "      <td>Global Warming</td>\n",
+       "      <td>ReCiPe</td>\n",
+       "      <td>105</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>per kWh of electricity</td>\n",
+       "      <td>cradle-to-gate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Energy Production</td>\n",
+       "      <td>Eutrophication</td>\n",
+       "      <td>ReCiPe</td>\n",
+       "      <td>85</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>per kWh of electricity</td>\n",
+       "      <td>cradle-to-grave</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      0               1       2    3              4     5  \\\n",
+       "0  Wastewater Treatment  Global Warming     CML  100         Europe  2020   \n",
+       "1  Wastewater Treatment  Eutrophication     CML   50  North America  2021   \n",
+       "2     Energy Production  Global Warming  ReCiPe  105         Europe  2020   \n",
+       "3     Energy Production  Eutrophication  ReCiPe   85  North America  2021   \n",
+       "\n",
+       "                               6                7  \n",
+       "0  per cubic meter of wastewater   cradle-to-gate  \n",
+       "1  per cubic meter of wastewater  cradle-to-grave  \n",
+       "2         per kWh of electricity   cradle-to-gate  \n",
+       "3         per kWh of electricity  cradle-to-grave  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>105.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>130.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>85.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0      1      2      3\n",
+       "0  105.0   95.0  100.0  110.0\n",
+       "1   55.0   45.0   55.0   60.0\n",
+       "2  130.0  140.0  150.0  160.0\n",
+       "3   85.0   75.0   80.0   90.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(y)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
